syntax = "proto3";

option go_package = "github.com/fireacademy/golden-gate/grpc";

service GoldenGate {
  rpc RefreshAPIKeyData (RefreshAPIKeyRequest) returns (RefreshAPIKeyReply) {}
}

message EmptyReply {}

message RefreshAPIKeyRequest {
  string APIKey = 1;
}

message RefreshAPIKeyReply {
  bool CanBeUsed = 1;
}